--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-	"//1": "describes your app and its dependencies",
-	"//2": "https://docs.npmjs.com/files/package.json",
-	"//3": "updating this file will download and update your packages",
-	"name": "FCC-Advanced-Node-and-Express",
-	"author": "http://github.com/JosephLivengood",
+	"name": "socialauth",
+	"author": "https://github.com/peteretherington",
 	"version": "0.0.1",
-	"description": "What am I about?",
+	"description": "FCC Social Auth project",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"dependencies": {
 		"express": "^4.14.1",
@@ -26,12 +23,15 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/peteretherington/socialauth"
 	},
 	"keywords": [
 		"node",
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.3"
+	}
 }
