--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"mongodb": "^2.2.22",
 		"nodemon": "^2.0.3",
 		"passport": "^0.3.2",
+		"passport-github": "^1.1.0",
 		"passport-local": "^1.0.0",
 		"pug": "^0.1.0"
 	},
